[WEEK056] Scalar computation and Vector computation